<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/colorGray"
    android:layout_height="match_parent"
    tools:context=".Activities.LoginPageActivity">

    <RelativeLayout


        android:layout_marginTop="150dp"
        android:id="@+id/rl1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textStyle="bold"

            android:textColor="@color/colorPrimary"
            android:layout_marginLeft="20dp"
            android:id="@+id/tv2"
            android:text="@string/enter_your_email"
            android:layout_width="wrap_content" android:layout_height="wrap_content"/>


        <EditText
            android:id="@+id/email"
            android:paddingLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_below="@+id/tv2"
            android:background="@drawable/edit_text"
            android:layout_width="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_height="40dp" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_marginTop="10dp"
        android:id="@+id/rl2"
        android:layout_below="@+id/rl1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:layout_marginLeft="20dp"
            android:id="@+id/password1"
            android:text="@string/enter_your_password"
            android:layout_width="wrap_content" android:layout_height="wrap_content"/>


        <EditText
          android:inputType="textPassword"
            android:id="@+id/password"
android:maxLength="7"
            android:paddingLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_below="@+id/password1"
            android:background="@drawable/edit_text"
            android:layout_width="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_height="40dp" />

    </RelativeLayout>
    <RelativeLayout
        android:layout_below="@+id/rl2"
        android:id="@+id/rl3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:text="@string/sign_in"
            android:textStyle="bold"
            android:id="@+id/login"
            android:textAllCaps="false"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:textColor="@color/colorWhite"
            android:layout_centerInParent="true"
            android:background="@drawable/button_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/rl4"
        android:layout_below="@+id/rl3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/forgot_password"
            android:text="@string/forget_password"
            android:textStyle="bold"
            android:layout_marginEnd="30dp"
            android:textColor="@color/colorPrimary"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl4"
        android:layout_centerVertical="true"
        android:layout_marginTop="6dp">

        <View

            android:id="@+id/v1"
            android:layout_width="90dp"
     android:layout_marginLeft="50dp"
            android:layout_height="1dp"
            android:layout_centerVertical="true"
            android:layout_marginTop="20dp"
            android:background="@color/colorBlack" />

        <TextView
            android:id="@+id/or"
            android:textColor="@color/colorBlack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:layout_toRightOf="@+id/v1"
            android:text="@string/or"
            android:textStyle="bold" />

        <View
            android:layout_width="90dp"

            android:layout_height="1dp"

            android:layout_centerInParent="true"

            android:layout_marginTop="20dp"
            android:layout_toRightOf="@+id/or"
            android:background="@color/colorBlack" />


    </RelativeLayout>
<RelativeLayout
    android:id="@+id/rl6"
    android:layout_below="@+id/rl5"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <Button
        android:textAllCaps="true"
        android:id="@+id/register"
        android:textStyle="bold"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textColor="@color/colorPrimary"
        android:text="@string/not_a_member"
        android:background="@drawable/edit_text"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</RelativeLayout>
    <!--<RelativeLayout-->
        <!--android:layout_below="@+id/rl"-->
        <!--android:layout_marginTop="20dp"-->
        <!--android:id="@+id/rl2"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content">-->

        <!--<TextView-->
            <!--android:textStyle="bold"-->
            <!--android:textColor="@color/colorPrimary"-->
            <!--android:layout_marginLeft="20dp"-->
            <!--android:id="@+id/password"-->
            <!--android:text="Enter Your Password*"-->
            <!--android:layout_width="wrap_content" android:layout_height="wrap_content"/>-->


        <!--<EditText-->
            <!--android:inputType="textCapWords"-->
            <!--android:id="@+id/password1"-->
            <!--android:paddingLeft="5dp"-->
            <!--android:layout_marginTop="3dp"-->
            <!--android:layout_below="@+id/password"-->
            <!--android:background="@drawable/edit_text"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_marginLeft="20dp"-->
            <!--android:layout_marginRight="20dp"-->
            <!--android:layout_height="40dp" />-->
    <!--</RelativeLayout>-->
    <!--<RelativeLayout-->
        <!--android:layout_below="@+id/rl2"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content">-->
        <!--<Button-->
            <!--android:text="Login"-->
            <!--android:layout_centerInParent="true"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content" />-->
    <!--</RelativeLayout>-->
</RelativeLayout>