<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGray"
    tools:context=".Activities.ForgotPasswordActivity">
    <android.support.v7.widget.Toolbar
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/toolbar"
        android:theme="@style/ToolbarTheme"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:minHeight="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp"
        app:contentInsetStartWithNavigation="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="10">
            <!--<ImageView-->
                <!--android:id="@+id/back_button"-->
                <!--android:layout_centerVertical="true"-->
                <!--android:layout_marginLeft="10dp"-->
                <!--android:src="@drawable/ic_arrow_back_black_24dp"-->
                <!--android:layout_width="35dp"-->
                <!--android:layout_height="35dp" />-->
            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ellipsize="end"
                android:gravity="center"
                android:textStyle="bold"
                android:maxLines="1"
                android:text="@string/forgot_password"
                android:textColor="@color/colorWhite"
                android:textSize="22sp" />


        </RelativeLayout>
    </android.support.v7.widget.Toolbar>
    <RelativeLayout
        android:layout_below="@+id/toolbar"
        android:layout_marginTop="100dp"
        android:id="@+id/rl1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_centerInParent="true"
            android:textSize="20sp"
            android:textColor="@color/colorBlack"
            android:textStyle="normal"
            android:layout_marginLeft="20dp"
            android:text="First, let's find your account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RelativeLayout>
    <RelativeLayout
        android:layout_below="@+id/rl1"
        android:id="@+id/rl2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_centerInParent="true"
            android:layout_marginTop="20dp"
            android:textSize="15sp"
            android:textColor="@color/colorBlack"
            android:layout_marginLeft="20dp"
            android:text="@string/please"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RelativeLayout>
    <RelativeLayout
        android:layout_marginTop="30dp"
        android:id="@+id/rl3"
        android:layout_below="@+id/rl2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:textColor="@color/colorBlack"
            android:layout_marginLeft="20dp"
            android:text="@string/email_or_phone"
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/name"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="3dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/edit_text"
            android:paddingLeft="5dp"
            android:textColor="@color/colorBlack" />
    </RelativeLayout>
    <LinearLayout
        android:id="@+id/rl4"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/rl3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

            <!--android:text="Cancel"-->

            <!--android:textStyle="bold"-->
         <!--android:layout_marginLeft="20dp"-->
            <!--android:textColor="@color/colorPrimary"-->
            <!--android:textAllCaps="false"-->
            <!--android:id="@+id/cancel"-->
            <!--android:background="@drawable/edit_text"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content" />-->
        <Button
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:id="@+id/forgot_code"
            android:background="@drawable/button_view"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:textAllCaps="false"
            android:paddingBottom="10dp"
            android:text="@string/find_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Button
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:id="@+id/cancel"
            android:background="@drawable/edit_text"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

            <!--android:textStyle="bold"-->
            <!--android:textAllCaps="false"-->
          <!--android:layout_marginRight="20dp"-->
<!--android:paddingRight="10dp"-->
            <!---->
            <!--android:layout_margin="10dp"-->
            <!--android:paddingLeft="10dp"-->
            <!--android:textColor="@color/colorWhite"-->
            <!--android:text="Find Account"-->
            <!--android:background="@drawable/button_view"-->
            <!--android:id="@+id/find_account"-->

            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_alignParentRight="true" />-->

    </LinearLayout>

</RelativeLayout>