<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.PostMessageActivity">
    <android.support.v7.widget.Toolbar
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/toolbar"
        android:theme="@style/ToolbarTheme"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:minHeight="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp"
        app:contentInsetStartWithNavigation="0dp">

        <RelativeLayout
            android:id="@+id/rl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="10">
            <!--<ImageView-->
                <!--android:id="@+id/back"-->
                <!--android:layout_centerVertical="true"-->
                <!--android:layout_marginLeft="10dp"-->
                <!--android:src="@drawable/ic_arrow_back_black_24dp"-->
                <!--android:layout_width="35dp"-->
                <!--android:layout_height="35dp" />-->
            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ellipsize="end"
                android:gravity="center"
                android:textStyle="bold"
                android:maxLines="1"
                android:text="@string/post_message"
                android:textColor="@color/colorWhite"
                android:textSize="22sp" />


        </RelativeLayout>
    </android.support.v7.widget.Toolbar>
    <RelativeLayout
        android:layout_below="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ScrollView

        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout

            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:paddingBottom="40dp"
            android:orientation="vertical"
            tools:ignore="NotSibling">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="20dp"
                android:text="@string/write_your_post"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/colorBlack"
                android:textSize="22sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/title"
                android:inputType="textCapSentences|textCapWords"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/edit_text"
                android:hint="Title"
                android:padding="8dp"
                android:textAllCaps="false"
                android:textSize="20dp" />


            <EditText
                android:id="@+id/description"
                android:inputType="textCapWords|textCapSentences|textMultiLine"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:maxLines="10"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/edit_text"
                android:gravity="top"
                android:hint="Description"
                android:padding="6dp"
                android:textAllCaps="false"
                android:textSize="20dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:weightSum="3">
                <LinearLayout
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:id="@+id/id_post_image"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center"
                        android:layout_marginEnd="8dp"
                        android:layout_marginStart="8dp"
                        android:src="@drawable/imgbtn" />
                    <TextView
                        android:id="@+id/photo"
                        android:textSize="18sp"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:textColor="@color/colorBlack"
                        android:text="@string/upload_photo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="or"
                    android:textAllCaps="false"
                    android:textSize="20dp"
                    android:textStyle="bold" />
                <RelativeLayout
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView

                        android:id="@+id/video"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:src="@drawable/img_video" />

                    <TextView

                        android:layout_below="@+id/video"
                        android:id="@+id/upload_video"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/upload_video"
                        android:textColor="@color/colorBlack"
                        android:textSize="18sp"
                        android:textStyle="bold" />


                </RelativeLayout>
            </LinearLayout>

            <Button
                android:id="@+id/submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="15dp"
android:background="@drawable/button_view"
                android:text="@string/submit"
                android:textAllCaps="false"
                android:textColor="#ffffff"
                android:textSize="20dp" />
        </LinearLayout>
        </RelativeLayout>
    </ScrollView>
    </RelativeLayout>

</RelativeLayout>